Definição das pastas necessárias para organizar o projeto

--- a/PDVLoja/PDVLoja.csproj
+++ b/PDVLoja/PDVLoja.csproj
@@ -8,4 +8,19 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Configurations\" />
+    <Folder Include="Forms\" />
+    <Folder Include="Helpers\" />
+    <Folder Include="Integrations\" />
+    <Folder Include="Models\Enums\" />
+    <Folder Include="Repositories\Interfaces\" />
+    <Folder Include="Resources\Images\" />
+    <Folder Include="Resources\Images\Icons\" />
+    <Folder Include="Resources\Reports\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Services\" />
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
