--- a/PDVLoja/PDVLoja.csproj
+++ b/PDVLoja/PDVLoja.csproj
@@ -12,7 +12,6 @@
   <ItemGroup>
     <Folder Include="Data\Configurations\" />
     <Folder Include="Forms\" />
-    <Folder Include="Helpers\" />
     <Folder Include="Integrations\" />
     <Folder Include="Repositories\Interfaces\" />
     <Folder Include="Resources\Images\" />
@@ -28,11 +27,14 @@
     <PackageReference Include="EPPlus" Version="8.3.0" />
     <PackageReference Include="HIC.System.Windows.Forms.DataVisualization" Version="1.0.1" />
     <PackageReference Include="iTextSharpNetCore" Version="1.0.2" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.SqlServer.Server" Version="1.0.0" />
     <PackageReference Include="WinForms.DataVisualization" Version="1.10.0" />
   </ItemGroup>
 
